@@ -235,7 +235,7 @@ left of \fBcvs_command\fR) are:
 \fB--allow-root=\fIrootdir\fB\fR
 .IP "" 2
 Specify legal \fBcvsroot\fR directory.  See
-see node `Password authentication server\(aq in the CVS manual.
+`Password authentication server\(aq in the CVS manual.
 .SP
 .IX "Authentication, stream"
 .IX "Stream authentication"
@@ -291,7 +291,7 @@ the \fB$CVSROOT\fR environment variable.  see node `Repository\(aq in the CVS ma
 Use \fIeditor\fR to enter revision log information.  Overrides the
 setting of the \fB$CVSEDITOR\fR and \fB$EDITOR\fR
 environment variables.  For more information, see
-see node `Committing your changes\(aq in the CVS manual.
+`Committing your changes\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-f\fR
@@ -544,8 +544,8 @@ give an error if you mistype a tag name.
 \fBWARNING:  The \fBcommit\fB and \fBremove\fB
 commands also have a
 \fB-f\fB option, but it has a different behavior for
-those commands.  See see node `commit options\(aq in the CVS manual, and
-see node `Removing files\(aq in the CVS manual.\fR
+those commands.  See `commit options\(aq in the CVS manual, and
+`Removing files\(aq in the CVS manual.\fR
 .SP
 .IP "" 0
 \fB-k \fIkflag\fB\fR
@@ -603,7 +603,7 @@ and \fBrtag\fR commands.
 .IP "" 0
 \fB-P\fR
 .IP "" 2
-Prune empty directories.  See see node `Removing directories\(aq in the CVS manual.
+Prune empty directories.  See `Removing directories\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-p\fR
@@ -642,8 +642,8 @@ future update commands, until you specify otherwise (for more information
 on sticky tags/dates, see node `Sticky tags\(aq in the CVS manual).
 .SP
 The tag can be either a symbolic or numeric tag, as
-described in see node `Tags\(aq in the CVS manual, or the name of a branch, as
-described in see node `Branching and merging\(aq in the CVS manual.
+described in `Tags\(aq in the CVS manual, or the name of a branch, as
+described in `Branching and merging\(aq in the CVS manual.
 When a command expects a specific revision,
 the name of a branch is interpreted as the most recent
 revision on that branch.
@@ -820,7 +820,7 @@ Replace the log message of revision \fIrev\fR with
 .IP "" 2
 Act like \fB-n\fR, except override any previous
 assignment of \fIname\fR.  For use with magic branches,
-see see node `Magic branch numbers\(aq in the CVS manual.
+see `Magic branch numbers\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-n\fIname\fB[:[\fIrev\fB]]\fR
@@ -1138,9 +1138,9 @@ or replaced; you need to use \fBcvs diff\fR for that
 (see node `diff\(aq in the CVS manual).
 .SP
 The options to \fBcvs annotate\fR are listed in
-see node `Invoking CVS\(aq in the CVS manual, and can be used to select the files
+`Invoking CVS\(aq in the CVS manual, and can be used to select the files
 and revisions to annotate.  The options are described
-in more detail there and in see node `Common options\(aq in the CVS manual.
+in more detail there and in `Common options\(aq in the CVS manual.
 .SP
 .SH "checkout"
 .SS "Check out sources for editing"
@@ -1212,7 +1212,7 @@ forget to change your directory to the top level
 directory.
 .SP
 For the output produced by the \fBcheckout\fR command
-see see node `update output\(aq in the CVS manual.
+see `update output\(aq in the CVS manual.
 .SP
 .SH "checkout options"
 .SP
@@ -1225,7 +1225,7 @@ them):
 .IP "" 2
 Use the most recent revision no later than \fIdate\fR.
 This option is sticky, and implies \fB-P\fR.  See
-see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
+`Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
 .SP
 .IP "" 0
 \fB-f\fR
@@ -1239,11 +1239,11 @@ the file).
 \fB-k \fIkflag\fB\fR
 .IP "" 2
 Process keywords according to \fIkflag\fR.  See
-see node `Keyword substitution\(aq in the CVS manual.
+`Keyword substitution\(aq in the CVS manual.
 This option is sticky; future updates of
 this file in this working directory will use the same
 \fIkflag\fR.  The \fBstatus\fR command can be viewed
-to see the sticky options.  See see node `Invoking CVS\(aq in the CVS manual, for
+to see the sticky options.  See `Invoking CVS\(aq in the CVS manual, for
 more information on the \fBstatus\fR command.
 .SP
 .IP "" 0
@@ -1261,7 +1261,7 @@ see node `modules\(aq in the CVS manual).
 .IP "" 0
 \fB-P\fR
 .IP "" 2
-Prune empty directories.  See see node `Moving directories\(aq in the CVS manual.
+Prune empty directories.  See `Moving directories\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-p\fR
@@ -1277,7 +1277,7 @@ Checkout directories recursively.  This option is on by default.
 \fB-r \fItag\fB\fR
 .IP "" 2
 Use revision \fItag\fR.  This option is sticky, and implies \fB-P\fR.
-See see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
+See `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
 .SP
 In addition to those, you can use these special command
 options with \fBcheckout\fR:
@@ -1287,7 +1287,7 @@ options with \fBcheckout\fR:
 .IP "" 2
 Reset any sticky tags, dates, or \fB-k\fR options.
 Does not reset sticky \fB-k\fR options on modified files.
-See see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
+See `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
 .SP
 .IP "" 0
 \fB-c\fR
@@ -1434,7 +1434,7 @@ enter a log message that will be written to one or more
 logging programs (see node `modules\(aq in the CVS manual, and see node `loginfo\(aq in the CVS manual)
 and placed in the \fBrcs\fR file inside the
 repository.  This log message can be retrieved with the
-\fBlog\fR command; see see node `log\(aq in the CVS manual.  You can specify the
+\fBlog\fR command; see `log\(aq in the CVS manual.  You can specify the
 log message on the command line with the \fB-m
 \fImessage\fB\fR option, and thus avoid the editor invocation,
 or use the \fB-F \fIfile\fB\fR option to specify
@@ -1477,7 +1477,7 @@ of invoking an editor.
 \fB-f\fR
 .IP "" 2
 Note that this is not the standard behavior of
-the \fB-f\fR option as defined in see node `Common options\(aq in the CVS manual.
+the \fB-f\fR option as defined in `Common options\(aq in the CVS manual.
 .SP
 Force \fBcvs\fR to commit a new revision even if you haven\(aqt
 made any changes to the file.  If the current revision
@@ -1625,7 +1625,7 @@ compared.  If any directories are given, all files
 under them will be compared.
 .SP
 The exit status for diff is different than for other
-\fBcvs\fR commands; for details see node `Exit status\(aq in the CVS manual.
+\fBcvs\fR commands; for details `Exit status\(aq in the CVS manual.
 .SP
 .SH "diff options"
 .SP
@@ -1643,7 +1643,7 @@ See \fB-r\fR for how this affects the comparison.
 \fB-k \fIkflag\fB\fR
 .IP "" 2
 Process keywords according to \fIkflag\fR.  See
-see node `Keyword substitution\(aq in the CVS manual.
+`Keyword substitution\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-l\fR
@@ -2839,7 +2839,7 @@ There are the following additional special options.
 .IP "" 0
 \fB-b \fIbranch\fB\fR
 .IP "" 2
-See see node `Multiple vendor branches\(aq in the CVS manual.
+See `Multiple vendor branches\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-k \fIsubst\fB\fR
@@ -2847,7 +2847,7 @@ See see node `Multiple vendor branches\(aq in the CVS manual.
 Indicate the keyword expansion mode desired.  This
 setting will apply to all files created during the
 import, but not to any files that previously existed in
-the repository.  See see node `Substitution modes\(aq in the CVS manual, for a
+the repository.  See `Substitution modes\(aq in the CVS manual, for a
 list of valid \fB-k\fR settings.
 .SP
 .IP "" 0
@@ -2914,7 +2914,7 @@ see node `modules\(aq in the CVS manual.)
 .SP
 .SH "import examples"
 .SP
-See see node `Tracking sources\(aq in the CVS manual, and see node `From files\(aq in the CVS manual.
+See `Tracking sources\(aq in the CVS manual, and `From files\(aq in the CVS manual.
 .SP
 .SH "log"
 .SS "Print out log information for files"
@@ -2952,10 +2952,11 @@ with the normal use inside \fBcvs\fB (see node `Common options\(aq in the CVS ma
 .SP
 By default, \fBlog\fR prints all information that is
 available.  All other options restrict the output.  Note that the revision
-selection options (\fB-d\fR, \fB-r\fR, \fB-s\fR, and \fB-w\fR) have no
+selection options (\fB-b\fR, \fB-d\fR, \fB-r\fR, \fB-s\fR, and \fB-w\fR)
+have no
 effect, other than possibly causing a search for files in Attic directories,
 when used in conjunction with the options that restrict the output to only
-\fBlog\fR header fields (\fB-b\fR, \fB-h\fR, \fB-R\fR, and \fB-t\fR)
+\fBlog\fR header fields (\fB-h\fR, \fB-R\fR, and \fB-t\fR)
 unless the \fB-S\fR option is also specified.
 .SP
 .IP "" 0
@@ -3116,7 +3117,7 @@ Print information about revisions whose state
 attributes match one of the states given in the
 comma-separated list \fIstates\fR.  Individual states may
 be any text string, though \fBcvs\fR commonly only uses two
-states, \fBExp\fR and \fBdead\fR.  See see node `admin options\(aq in the CVS manual
+states, \fBExp\fR and \fBdead\fR.  See `admin options\(aq in the CVS manual
 for more information.
 .SP
 .IP "" 0
@@ -3197,7 +3198,7 @@ recent revision (instead of ignoring the file).
 \fB-k \fIkflag\fB\fR
 .IP "" 2
 Process keywords according to \fIkflag\fR.  See
-see node `Keyword substitution\(aq in the CVS manual.
+`Keyword substitution\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-l\fR
@@ -3448,7 +3449,7 @@ them):
 .IP "" 2
 Use the most recent revision no later than \fIdate\fR.
 This option is sticky, and implies \fB-P\fR.
-See see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
+See `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
 .SP
 .IP "" 0
 \fB-f\fR
@@ -3462,11 +3463,11 @@ the file).
 \fB-k \fIkflag\fB\fR
 .IP "" 2
 Process keywords according to \fIkflag\fR.  See
-see node `Keyword substitution\(aq in the CVS manual.
+`Keyword substitution\(aq in the CVS manual.
 This option is sticky; future updates of
 this file in this working directory will use the same
 \fIkflag\fR.  The \fBstatus\fR command can be viewed
-to see the sticky options.  See see node `Invoking CVS\(aq in the CVS manual, for
+to see the sticky options.  See `Invoking CVS\(aq in the CVS manual, for
 more information on the \fBstatus\fR command.
 .SP
 .IP "" 0
@@ -3477,7 +3478,7 @@ Local; run only in current working directory.  see node `Recursive behavior\(aq 
 .IP "" 0
 \fB-P\fR
 .IP "" 2
-Prune empty directories.  See see node `Moving directories\(aq in the CVS manual.
+Prune empty directories.  See `Moving directories\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-p\fR
@@ -3495,7 +3496,7 @@ behavior\(aq in the CVS manual.
 .IP "" 2
 Retrieve revision/tag \fIrev\fR.  This option is sticky,
 and implies \fB-P\fR.
-See see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
+See `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
 .SP
 These special options are also available with
 \fBupdate\fR.
@@ -3505,7 +3506,7 @@ These special options are also available with
 .IP "" 2
 Reset any sticky tags, dates, or \fB-k\fR options.
 Does not reset sticky \fB-k\fR options on modified files.
-See see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
+See `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
 .SP
 .IP "" 0
 \fB-C\fR
@@ -3651,7 +3652,7 @@ is also in your working directory, with the name
 \fB.#\fIfile\fB.\fIrevision\fB\fR where \fIrevision\fR
 is the revision that your modified file started
 from.  Resolve the conflict as described in
-see node `Conflicts example\(aq in the CVS manual.
+`Conflicts example\(aq in the CVS manual.
 (Note that some systems automatically purge
 files that begin with \fB.#\fR if they have not been
 accessed for a few days.  If you intend to keep a copy
