@@ -1,4 +1,4 @@
-@set UPDATED 26 June 2006
-@set UPDATED-MONTH June 2006
+@set UPDATED 21 August 2006
+@set UPDATED-MONTH August 2006
 @set EDITION 1.11.22.1
 @set VERSION 1.11.22.1
